--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/drawer": "^7.4.4",
     "@react-navigation/native": "^7.1.13",
     "@react-navigation/stack": "^7.3.6",
+    "axios": "^1.10.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.12",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
